added floorwise vizualization and interaction

--- a/web/index.html
+++ b/web/index.html
@@ -4,12 +4,21 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Goodwin Hall Visualization</title>
-	<!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet"> -->
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/button-style.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+
+
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 	<div id="tooltip" class="hidden">
@@ -60,11 +69,8 @@
 		</div>
 	</div>
 
-
-	<!-- </section> -->
 	<section class="content">
 		<div id="v1">
-			<!-- <div class="v1 highlight hidden"></div> -->
 			<div class="floor first"></div>
 			<div class="floor second"></div>
 			<div class="floor third"></div>
@@ -81,7 +87,6 @@
 		</div>
 		<div id="v3-parent">
 			<div id="v3"></div>
-			<!-- <div class="v3 highlight hidden"></div> -->
 			<div class="zoom-view">
 				<div class="zoom-in"><span><i class="icon-zoom-in"></i></span></div>
 				<div class="zoom-out"><span><i class="icon-zoom-out"></i></span></div>
